we need to use the edit engine attibute id for rich text, tdf#89170

Conflicts:
	sc/source/filter/oox/stylesbuffer.cxx

Change-Id: I8489b0341709d44bc62e5ddef49fe232998f3c80